통계 로직 공통화, 데이터테이블, 차트 표출 완료

--- a/danusys-platform/src/main/resources/application-bs-ng.properties
+++ b/danusys-platform/src/main/resources/application-bs-ng.properties
@@ -28,6 +28,9 @@ homePage.url=/pages/mntr
 mainPage.logo=logo_bs_ng.svg
 mainPage.title=\uBD80\uC0B0 \uB0A8\uAD6C IoT \uD50C\uB7AB\uD3FC
 
+## stats default type
+stats.type=pole
+
 ## Municipality setting
 municipality.favicon=/images/favicon/favicon_bs_ng.ico
 municipality.name=26290000
