--- a/danusys-platform/src/main/resources/application-gj.properties
+++ b/danusys-platform/src/main/resources/application-gj.properties
@@ -28,6 +28,9 @@ homePage.url=/pages/mntr
 mainPage.logo=logo_gj.svg
 mainPage.title=\uAE40\uC81C\uC2DC IoT \uD50C\uB7AB\uD3FC
 
+## stats default type
+stats.type=cabinet
+
 ## Municipality setting
 municipality.favicon=/images/favicon/favicon_gj.ico
 municipality.name=45210000
