--- a/danusys-platform/src/main/resources/application-gm.properties
+++ b/danusys-platform/src/main/resources/application-gm.properties
@@ -29,6 +29,9 @@ homePage.url=/pages/mntr
 mainPage.logo=logo_gm.svg
 mainPage.title=\uAD11\uBA85 IoT \uD50C\uB7AB\uD3FC
 
+## stats default type
+stats.type=pole
+
 ## Municipality setting
 municipality.favicon=/images/favicon/favicon_gm.ico
 municipality.name=41210000
