--- a/danusys-platform/src/main/resources/application-yj.properties
+++ b/danusys-platform/src/main/resources/application-yj.properties
@@ -28,6 +28,9 @@ homePage.url=/pages/mntr
 mainPage.logo=logo_gm.svg
 mainPage.title=\uC601\uC8FC\uC2DC IoT \uD50C\uB7AB\uD3FC
 
+## stats default type
+stats.type=busStop
+
 ## Municipality setting
 municipality.favicon=/images/favicon/favicon_yj.ico
 municipality.name=47210000
