--- a/danusys-platform/src/main/resources/application.properties
+++ b/danusys-platform/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Server Setting
 server.port=8400
 ## Naming : si/gun - gu
-spring.profiles.include=dev
+spring.profiles.include=gj
 
 ## JPA Setting
 spring.jpa.database=postgresql
