광명 LG Becon soap 통신

--- a/pom.xml
+++ b/pom.xml
@@ -68,26 +68,26 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
-        <repository>
-            <id>egovframe_old1</id>
-            <url>http://maven.egovframe.kr:8080/maven/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>egovframe_old2</id>
-            <url>http://www.egovframe.go.kr/maven/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
+<!--        <repository>-->
+<!--            <id>egovframe_old1</id>-->
+<!--            <url>http://maven.egovframe.kr:8080/maven/</url>-->
+<!--            <releases>-->
+<!--                <enabled>true</enabled>-->
+<!--            </releases>-->
+<!--            <snapshots>-->
+<!--                <enabled>false</enabled>-->
+<!--            </snapshots>-->
+<!--        </repository>-->
+<!--        <repository>-->
+<!--            <id>egovframe_old2</id>-->
+<!--            <url>http://www.egovframe.go.kr/maven/</url>-->
+<!--            <releases>-->
+<!--                <enabled>true</enabled>-->
+<!--            </releases>-->
+<!--            <snapshots>-->
+<!--                <enabled>false</enabled>-->
+<!--            </snapshots>-->
+<!--        </repository>-->
         <repository>
             <id>keesun.mvn.repo</id>
             <url>https://github.com/keesun/mvn-repo/raw/master</url>
