--- a/danusys-platform/src/main/resources/application.properties
+++ b/danusys-platform/src/main/resources/application.properties
@@ -54,3 +54,5 @@ logging.level.com.danusys.web=trace
 
 ## loginPage Path
 loginPage.path=layout/layout_login
+
+spring.jpa.properties.hibernate.default_batch_fetch_size=500
