이벤트 종류 조회시 하위 타입 조회 추가, 통계 차트 refresh 추가.

--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -30,7 +30,7 @@ mainPage.logo=logo_gm.svg
 mainPage.title=\uAD11\uBA85 IoT \uD50C\uB7AB\uD3FC
 
 ## stats default type
-stats.type=pole
+stats.type=smart_pole_event
 
 # municipality setting
 municipality.favicon=/images/favicon/favicon_gm.ico
