--- a/danusys-platform/src/main/resources/application-gj.properties
+++ b/danusys-platform/src/main/resources/application-gj.properties
@@ -29,7 +29,7 @@ mainPage.logo=logo_gj.svg
 mainPage.title=\uAE40\uC81C\uC2DC IoT \uD50C\uB7AB\uD3FC
 
 ## stats default type
-stats.type=cabinet
+stats.type=EMS_EVENT
 
 ## Municipality setting
 municipality.favicon=/images/favicon/favicon_gj.ico
