--- a/danusys-platform/src/main/resources/application-yj.properties
+++ b/danusys-platform/src/main/resources/application-yj.properties
@@ -29,7 +29,7 @@ mainPage.logo=logo_gm.svg
 mainPage.title=\uC601\uC8FC\uC2DC IoT \uD50C\uB7AB\uD3FC
 
 ## stats default type
-stats.type=busStop
+stats.type=smart_busstop_event
 
 ## Municipality setting
 municipality.favicon=/images/favicon/favicon_yj.ico
