--- a/danusys-platform/src/main/resources/application-bs-ng.properties
+++ b/danusys-platform/src/main/resources/application-bs-ng.properties
@@ -29,7 +29,7 @@ mainPage.logo=logo_bs_ng.svg
 mainPage.title=\uBD80\uC0B0 \uB0A8\uAD6C IoT \uD50C\uB7AB\uD3FC
 
 ## stats default type
-stats.type=pole
+stats.type=smart_pole_event
 
 ## Municipality setting
 municipality.favicon=/images/favicon/favicon_bs_ng.ico
