--- a/danusys-platform/src/main/resources/application-local.properties
+++ b/danusys-platform/src/main/resources/application-local.properties
@@ -31,7 +31,7 @@ mainPage.logo=logo_gm.svg
 mainPage.title=\uAD11\uBA85 IoT \uD50C\uB7AB\uD3FC
 
 ## stats default type
-stats.type=pole
+stats.type=smart_pole_event
 
 ## Municipality setting
 municipality.favicon=/images/favicon/favicon_gm.ico
