--- a/danusys-commons-app/pom.xml
+++ b/danusys-commons-app/pom.xml
@@ -125,6 +125,12 @@
             <version>20211205</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.jhlabs</groupId>
+            <artifactId>javaproj</artifactId>
+            <version>1.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
