사이니지 미리보기 기능 추가

--- a/danusys-platform/src/main/resources/application.properties
+++ b/danusys-platform/src/main/resources/application.properties
@@ -39,7 +39,7 @@ access.token.expire.time= 90000000
 ## 1000 * 60 * 20
 refresh.token.expire.time= 120000000
 #refresh.token.expire.time= 120000
-defaultFailureUrl =/login/errorTest
+defaultFailureUrl =/login/error
 
 ## logging Setting
 logging.level.root=info
