에러페이지 생성 및 적용, 로그인 에러처리

--- a/danusys-platform/src/main/resources/application.properties
+++ b/danusys-platform/src/main/resources/application.properties
@@ -39,7 +39,11 @@ access.token.expire.time= 90000000
 ## 1000 * 60 * 20
 refresh.token.expire.time= 120000000
 #refresh.token.expire.time= 120000
-defaultFailureUrl =/login/error
+defaultFailureUrl =/error
+
+server.error.include-exception=true
+server.error.include-stacktrace=never
+server.error.whitelabel.enabled=false
 
 ## logging Setting
 logging.level.root=info
