조회관리 조회 안되는 문제 수정, 조회관리 기타 UI 수정

--- a/danusys-platform/src/main/resources/application.properties
+++ b/danusys-platform/src/main/resources/application.properties
@@ -41,6 +41,7 @@ refresh.token.expire.time= 120000000
 #refresh.token.expire.time= 120000
 defaultFailureUrl =/error
 
+## Error page setting
 server.error.include-exception=true
 server.error.include-stacktrace=never
 server.error.whitelabel.enabled=false
