--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 ##DEV###
 ########
 
-spring.profiles.active=test
+spring.profiles.active=gm
 
 ## Database Setting (postgresql)
 spring.datasource.driver-class-name=org.postgresql.Driver
