cctv 시설물 동기화 xml 파싱 진행중

--- a/danusys-platform/src/main/resources/application-local.properties
+++ b/danusys-platform/src/main/resources/application-local.properties
@@ -7,10 +7,12 @@ spring.profiles.active=gm
 ## Database Setting (postgresql)
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://192.168.14.100:5432/iot_platform
-#spring.datasource.url=jdbc:postgresql://danusys.asuscomm.com:5432/iot_platform
-spring.datasource.url=jdbc:postgresql://localhost:5432/iot4
-spring.datasource.username=postgres
-spring.datasource.password=dufqkd
+spring.datasource.url=jdbc:postgresql://danusys.asuscomm.com:5432/iot_platform
+spring.datasource.username=gm
+spring.datasource.password=Danu1002!!
+#spring.datasource.url=jdbc:postgresql://localhost:5432/iot5
+#spring.datasource.username=postgres
+#spring.datasource.password=dufqkd
 
 ## File Upload Path Setting
 danusys.file.upload.path=/Users/kai/web/upload
