--- a/danusys-server-socket/pom.xml
+++ b/danusys-server-socket/pom.xml
@@ -54,6 +54,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.danusys.web</groupId>
+            <artifactId>danusys-commons-app</artifactId>
+            <version>0.9.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
