--- a/danusys-platform/src/main/resources/application-yj.properties
+++ b/danusys-platform/src/main/resources/application-yj.properties
@@ -6,10 +6,12 @@ spring.profiles.active=yj
 ## Database Setting (postgresql)
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://192.168.10.11:5432/iot_platform
-spring.datasource.url=jdbc:postgresql://172.20.14.249:5432/iot_platform
-spring.datasource.username=postgres
-spring.datasource.password=danu1234
-
+#spring.datasource.url=jdbc:postgresql://172.20.14.249:5432/iot_platform
+#spring.datasource.username=gm
+#spring.datasource.password=danu1234
+spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/iot_platform
+spring.datasource.username=gm
+spring.datasource.password=Danu1002!!
 ## File Upload Path Setting
 danusys.file.upload.path=/web/upload
 
