광명시 환경에 맞게 설정 변경

--- a/danusys-platform/src/main/resources/application-local.properties
+++ b/danusys-platform/src/main/resources/application-local.properties
@@ -7,12 +7,12 @@ spring.profiles.active=gm
 ## Database Setting (postgresql)
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://192.168.14.100:5432/iot_platform
-spring.datasource.url=jdbc:postgresql://danusys.asuscomm.com:5432/iot_platform
-spring.datasource.username=gm
-spring.datasource.password=Danu1002!!
-#spring.datasource.url=jdbc:postgresql://localhost:5432/iot5
-#spring.datasource.username=postgres
-#spring.datasource.password=dufqkd
+#spring.datasource.url=jdbc:postgresql://danusys.asuscomm.com:5432/iot_platform
+#spring.datasource.username=gm
+#spring.datasource.password=Danu1002!!
+spring.datasource.url=jdbc:postgresql://localhost:5432/iot
+spring.datasource.username=postgres
+spring.datasource.password=dufqkd
 
 ## File Upload Path Setting
 danusys.file.upload.path=/Users/kai/web/upload
@@ -42,6 +42,8 @@ municipality.name=41210000
 # airKorea service key(TODO : need gm service key)
 airkorea.service.key=?
 
-gm.webservice.url.ip=192.168.14.104
+service.ip=localhost
+facility.xml.path=/Users/kai/dev/danusys-webservice-parent/danusys-commons-api/src/main/resources/data/gm_soap/
 
 logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=TRACE
+
