--- a/danusys-platform/src/main/resources/application-gm.properties
+++ b/danusys-platform/src/main/resources/application-gm.properties
@@ -39,3 +39,9 @@ municipality.name=41210000
 
 # airKorea service key(TODO : need gm service key)
 airkorea.service.key=?
+
+service.ip=192.168.14.101
+facility.xml.path=/home/gmcity/danusys-platform/8400/upload/data/gm_soap/
+
+logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=TRACE
+
