남구 properties 수정

--- a/danusys-platform/src/main/resources/application-bsng.properties
+++ b/danusys-platform/src/main/resources/application-bsng.properties
@@ -4,17 +4,17 @@
 
 spring.profiles.active=bsng
 ## DB
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://10.8.50.51:5432/iot_platform
-#spring.datasource.username=bng
-#spring.datasource.password=Danu1002!!
-
-
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/iot_platform
-#spring.datasource.url=jdbc:postgresql://danusys.asuscomm.com:5432/iot_platform
-spring.datasource.username=gm
+spring.datasource.url=jdbc:postgresql://10.8.50.51:5432/iot_platform
+spring.datasource.username=bng
 spring.datasource.password=Danu1002!!
+
+
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/iot_platform
+#spring.datasource.url=jdbc:postgresql://danusys.asuscomm.com:5432/iot_platform
+#spring.datasource.username=gm
+#spring.datasource.password=Danu1002!!
 
 ## File Upload Path Setting
 danusys.file.upload.path=/web/upload
@@ -46,7 +46,7 @@ municipality.name=26290000
 
 
 # airKorea service key(TODO : need bsng service key)
-airkorea.service.key=?
+airkorea.service.key=hniW4O1NEXjGlXt2iG86%2BuASxSvHti1Na1z%2FeaF%2Fz3dyxkolAKkJD8Nx9YqKNoZQ6iH09he6c6o3IX%2BwKqahwA%3D%3D
 
 #keytool -genkey -alias danusys-platform-ssl -keyalg RSA -keysize 2048 -validity 7300 -keypass danu1234 -keystore danusys-platform-server.jks
 #server.ssl.enabled=true
@@ -57,3 +57,5 @@ airkorea.service.key=?
 
 
 logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=TRACE
+
+vms.server.map={'10.8.50.31':'1'}
