--- a/danusys-platform/src/main/resources/application-bsng.properties
+++ b/danusys-platform/src/main/resources/application-bsng.properties
@@ -40,10 +40,12 @@ homePage.url=/pages/mntr
 mainPage.logo=logo_bs_ng.svg
 mainPage.title=\uBD80\uC0B0\uB0A8\uAD6C IoT \uD50C\uB7AB\uD3FC
 
+## stats default type
+stats.type=smart_pole_event
+
 # municipality setting
 municipality.favicon=/images/favicon/favicon_bsnamgu.ico
 municipality.name=26290000
-
 
 # airKorea service key(TODO : need bsng service key)
 airkorea.service.key=hniW4O1NEXjGlXt2iG86%2BuASxSvHti1Na1z%2FeaF%2Fz3dyxkolAKkJD8Nx9YqKNoZQ6iH09he6c6o3IX%2BwKqahwA%3D%3D
