CCTV 동기화 동작 변경(남구, 광명만 되도록)

--- a/danusys-platform/src/main/resources/application-gm.properties
+++ b/danusys-platform/src/main/resources/application-gm.properties
@@ -45,3 +45,5 @@ facility.xml.path=/home/gmcity/danusys-platform/8400/upload/data/gm_soap/
 
 logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=TRACE
 
+vms.server.map={'10.8.50.31':'1'}
+
