--- a/danusys-commons-api/pom.xml
+++ b/danusys-commons-api/pom.xml
@@ -104,6 +104,12 @@
             <artifactId>cxf-rt-transports-http</artifactId>
             <version>2.7.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.5.3</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
     <build>
