CCTV 동기화 수정

--- a/danusys-platform/src/main/resources/application-bsng.properties
+++ b/danusys-platform/src/main/resources/application-bsng.properties
@@ -61,3 +61,4 @@ airkorea.service.key=hniW4O1NEXjGlXt2iG86%2BuASxSvHti1Na1z%2FeaF%2Fz3dyxkolAKkJD
 logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=TRACE
 
 vms.server.map={'10.8.50.31':'1'}
+vms.midsvr.url=http://10.8.50.12:10003/api/athena/midsvr
