--- a/danusys-platform/src/main/resources/application-gm.properties
+++ b/danusys-platform/src/main/resources/application-gm.properties
@@ -6,8 +6,8 @@ spring.profiles.active=gm
 ## TODO : \uAD11\uBA85 \uC2E4\uC11C\uBC84 DB \uC815\uBCF4 \uD544\uC694
 ## Database Setting (postgresql)
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://192.168.14.100:5432/iot_platform
-spring.datasource.url=jdbc:postgresql://danusys.asuscomm.com:5432/iot_platform
+spring.datasource.url=jdbc:postgresql://192.168.14.100:5432/iot_platform
+#spring.datasource.url=jdbc:postgresql://danusys.asuscomm.com:5432/iot_platform
 #spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/iot_platform
 spring.datasource.username=gm
 spring.datasource.password=Danu1002!!
@@ -45,5 +45,6 @@ facility.xml.path=/home/gmcity/danusys-platform/8400/upload/data/gm_soap/
 
 logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=TRACE
 
-vms.server.map={'10.8.50.31':'1'}
+vms.server.map={'192.168.91.136':'1'}
+vms.midsvr.url=http://192.168.14.105:10003/api/athena/midsvr
 
