실서버에서 오류 발생하여 수정함

--- a/danusys-platform/src/main/resources/application-local.properties
+++ b/danusys-platform/src/main/resources/application-local.properties
@@ -47,3 +47,6 @@ facility.xml.path=/Users/kai/dev/danusys-webservice-parent/danusys-commons-api/s
 
 logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=TRACE
 
+#\uAD00\uB9AC\uC11C\uBC84 IP
+vms.server.map={'192.168.91.136':'1'}
+rtsp.url.format=rtsp://admin:1q2w3e4R!@{0}:554/video1
