광명 사이니지 데이터 IP 고정된 부분 수정, 광명 사이니지 데이저 저장 UI 수정 진행중

--- a/danusys-platform/src/main/resources/application-gj.properties
+++ b/danusys-platform/src/main/resources/application-gj.properties
@@ -6,8 +6,8 @@ spring.profiles.active=gj
 ## TODO : \uAE40\uC81C\uC2DC \uC2E4\uC11C\uBC84 DB \uC815\uBCF4 \uD544\uC694
 ## Database Setting (postgresql)
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/iot_platform
-spring.datasource.username=gm
+spring.datasource.url=jdbc:postgresql://172.19.200.213:5432/iot_platform
+spring.datasource.username=gj
 spring.datasource.password=Danu1002!!
 
 ## File Upload Path Setting
