광명 scheduler 적용 완료

--- a/danusys-platform/src/main/resources/application-gm.properties
+++ b/danusys-platform/src/main/resources/application-gm.properties
@@ -40,9 +40,13 @@ municipality.name=41210000
 # airKorea service key(TODO : need gm service key)
 airkorea.service.key=?
 
+#fow real
 service.ip=192.168.14.101
 facility.xml.path=/home/gmcity/danusys-platform/8400/upload/data/gm_soap/
 
+#for window
+#service.ip=127.0.0.1
+#facility.xml.path=C:\\Users\\danusys\\IdeaProjects\\danusys-webservice-parent\\danusys-commons-api\\src\\main\\resources\\data\gm_soap
 logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=TRACE
 
 vms.server.map={'192.168.91.136':'1'}
