--- a/danusys-platform/src/main/resources/application.properties
+++ b/danusys-platform/src/main/resources/application.properties
@@ -59,3 +59,5 @@ logging.level.com.danusys.web=trace
 loginPage.path=layout/layout_login
 
 spring.jpa.properties.hibernate.default_batch_fetch_size=500
+
+spring.main.allow-bean-definition-overriding=true
