사용자 계정 페이지 추가

--- a/danusys-firefighting/src/main/resources/application.properties
+++ b/danusys-firefighting/src/main/resources/application.properties
@@ -9,13 +9,13 @@ spring.datasource.username=gm
 spring.datasource.password=Danu1002!!
 
 ## LoginPage Setting
-loginPage.kor.title=\uC18C\uBC29 \uC7AC\uB09C
+loginPage.kor.title=\uC18C\uBC29 \uC7AC\uB09C \uAD00\uC81C \uC2DC\uC2A4\uD15C
 loginPage.eng.title=firefightigng
 loginPage.logo=logo_gm.svg
 
 ## MainPage
 mainPage.logo=logo_gm.svg
-mainPage.title=\uC18C\uBC29\uC7AC\uB09C
+mainPage.title=\uC18C\uBC29 \uC7AC\uB09C \uAD00\uC81C \uC2DC\uC2A4\uD15C
 
 
 ## HomePage url
@@ -86,5 +86,6 @@ spring.main.allow-bean-definition-overriding=true
 
 ## \uC815\uC801 \uC18C\uC2A4 \uC801\uC6A9
 spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
 spring.freemarker.cache=false
 spring.thymeleaf.cache=false
