건설공사장 모듈 추가

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>danusys-server-socket</module>
         <module>danusys-firefighting</module>
         <module>demo</module>
+        <module>danusys-construction-cctv</module>
 
     </modules>
 
