--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>danusys-firefighting</module>
         <module>demo</module>
         <module>danusys-construction-cctv</module>
+        <module>danusys-commons-sql-converter</module>
 
     </modules>
 
