[2022-09-16] 심규환 GS 인증용 화면 UI 제거

--- a/danusys-commons-sql-converter/src/main/resources/application.properties
+++ b/danusys-commons-sql-converter/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.datasource.postgresql.password=Danu1002!!
 
 spring.datasource.mariadb.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.mariadb.url=jdbc:mariadb://172.20.14.7:3306/119_gis
-spring.datasource.mariadb.username=root
-spring.datasource.mariadb.password=admin
+spring.datasource.mariadb.username=hawool
+spring.datasource.mariadb.password=hawool
 
 spring.datasource.oracle.driver-class-name=org.oracle.jdbc.Driver
 spring.datasource.oracle.url=jdbc:oracle://172.20.14.63:1521/ERSS
