--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -6,11 +6,12 @@ spring.profiles.active=gm
 
 ## Database Setting (postgresql)
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/iot_platform
+spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/iot_platform_gs
+#spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/gm_test3
 #spring.datasource.url=jdbc:postgresql://danusys.asuscomm.com:5432/iot_platform
 spring.datasource.username=gm
 spring.datasource.password=Danu1002!!
-
+server.port=8401
 ## File Upload Path Setting
 danusys.file.upload.path=C:/dev/upload
 
