--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -6,8 +6,8 @@ spring.profiles.active=gm
 
 ## Database Setting (postgresql)
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/iot_platform_gs
-#spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/gm_test3
+spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/gs_test_platform
+#spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/gm_test4
 #spring.datasource.url=jdbc:postgresql://danusys.asuscomm.com:5432/iot_platform
 spring.datasource.username=gm
 spring.datasource.password=Danu1002!!
@@ -17,7 +17,7 @@ danusys.file.upload.path=C:/dev/upload
 
 ## map Setting
 danusys.area.code.sig=41210
-
++
 #login Setting
 loginPage.kor.title=\uAD11\uBA85\uC2DC \uC2A4\uB9C8\uD2B8\uC2DC\uD2F0 IoT\uD50C\uB7AB\uD3FC
 loginPage.eng.title=Gwangmyeong Smart City IoT Platform
